Time-Minutes functionality added. Date aligned in center. Content fixed-width removed.

--- a/css/style.css
+++ b/css/style.css
@@ -23,16 +23,21 @@ body{
     flex-direction:column;
 }
 
-#content-wrapper{
-    width:265px;
-}
+
 
 .time{
     padding:0px 5px;
     font-weight:200;
+    display:inline-block;
+    width:70px;
 }
 .row{
     padding:3px 10px;
+}
+
+
+.time-container{
+    text-align:center;
 }
 
 .row:nth-child(2){
